test/files/neg/macro-invalidsig-params-badargc.check
Impls_Macros_1.scala:8: error: macro implementation has incompatible shape:
 required: (c: scala.reflect.macros.Context)(x: c.Expr[Int]): c.Expr[Any]
 found   : (c: scala.reflect.macros.Context)(x: c.Expr[Int], y: c.Expr[Int]): Nothing
parameter lists have different length, found extra parameter y: c.Expr[Int]
  def foo(x: Int) = macro Impls.foo
                                ^
one error found
